crates/host-macros/tests/compile_fail/invalid_mode.rs
omnia_host_macros::runtime!({
    mode: banana,
});

fn main() {}
