crates/host-macros/tests/compile_fail/invalid_mode.stderr
error: expected `server` or `command`, got `banana`
 --> tests/compile_fail/invalid_mode.rs:2:11
  |
2 |     mode: banana,
  |           ^^^^^^
